--- a/list4.html
+++ b/list4.html
@@ -86,13 +86,17 @@
             <dd><a href="e/29/index.html" target="_blank" title="百度文库评分">15.百度文库评分</a></dd>
             <dd><a href="e/30/index.html" target="_blank" title="百度音乐-全选操作">16.百度音乐-全选操作</a></dd>
             <dd><h5>JS8-函数返回值、定时器基础</h5></dd>
-            <dd><a href="e/31/index.html" target="_blank" title="淘宝商品广告效果">13.淘宝商品广告效果</a></dd>
+            <dd><a href="e/31/index.html" target="_blank" title="淘宝商品广告效果">17.淘宝商品广告效果</a></dd>
+            <dd><a href="e/32/index.html" target="_blank" title="延时消失的菜单">18.延时消失的菜单</a></dd>
+            <dd><a href="e/33/index.html" target="_blank" title="按钮控制商品图片上下滚动">19.按钮控制商品图片上下滚动</a></dd>
+            <dd><a href="e/34/index.html" target="_blank" title="自动轮换选项卡">20.自动轮换选项卡</a></dd>
             <dd><h5>JS9-定时器管理、函数封装</h5></dd>
             <dd><h5>JS10-日期对象、网页时钟、倒计时</h5></dd>
-            <dd><h5>JS11-字符串方法</h5></dd>
+            <dd><h5>JS11-字符串方法 OK</h5></dd>
             <dd><a href="e/36/index.html" target="_blank" title="文字搬运工">14.文字搬运工</a></dd>
             <dd><a href="e/37/index.html" target="_blank" title="查找、替换、删除">15.查找、替换、删除</a></dd>
             <dd><h5>JS12-数组方法</h5></dd>
+             <dd><a href="e/38/index.html" target="_blank" title="文字搬运工">14.文字搬运工</a></dd>
             
         </dl>
       </li>
