--- a/list5.html
+++ b/list5.html
@@ -55,6 +55,8 @@
 		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb24.jpg" alt=""></a></div>
 		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb25.jpg" alt=""></a></div>
 		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb26.jpg" alt=""></a></div>
+          <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb27.jpg" alt=""></a></div>
+          <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb28.jpg" alt=""></a></div>
 		</div>
 	</div>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
