--- a/list4.html
+++ b/list4.html
@@ -96,7 +96,7 @@
             <dd><a href="e/36/index.html" target="_blank" title="文字搬运工">14.文字搬运工</a></dd>
             <dd><a href="e/37/index.html" target="_blank" title="查找、替换、删除">15.查找、替换、删除</a></dd>
             <dd><h5>JS12-数组方法</h5></dd>
-             <dd><a href="e/38/index.html" target="_blank" title="文字搬运工">14.文字搬运工</a></dd>
+             <dd><a href="e/38/index.html" target="_blank" title="文字搬运工">38.图片排序</a></dd>
             
         </dl>
       </li>
