--- a/list5.html
+++ b/list5.html
@@ -24,40 +24,73 @@
     		width: 150px;
     		height: auto;
     	}
+        html,body{height:100%} 
+        #big{
+            display: none;
+            position: fixed;
+            width:100%;
+            height: 100%;
+            background: rgba(0,0,0,0.3);
+        }
+        #big button{
+            display: block;
+            width:80px;
+            height: 50px;
+            line-height: 50px;
+            background: #A8C0FC;
+            color:#fff;
+            margin:0 auto;
+        }
+        #big img{
+            display: block;
+            max-width: 60%;
+            height: 600px;
+            overflow-y:scroll;
+            margin:auto;
+            position: absolute;
+            left: 0;
+            top:0;
+            bottom: 0;
+            right: 0;
+        }
     </style>
 </head>
 <body>
 	<div class="paint">
 		<div id="paint">
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb1.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb2.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb3.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb4.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb5.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb6.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb7.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb8.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb9.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb10.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb11.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb12.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb13.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb14.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb15.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb16.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb17.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb18.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb19.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb20.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb21.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb22.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb23.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb24.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb25.jpg" alt=""></a></div>
-		  <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb26.jpg" alt=""></a></div>
-          <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb27.jpg" alt=""></a></div>
-          <div class="item"><a href="" class="thumbnail"><img src="img/paint/psb28.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb1.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb2.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb3.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb4.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb5.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb6.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb7.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb8.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb9.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb10.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb11.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb12.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb13.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb14.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb15.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb16.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb17.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb18.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb19.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb20.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb21.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb22.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb23.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb24.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb25.jpg" alt=""></a></div>
+		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb26.jpg" alt=""></a></div>
+          <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb27.jpg" alt=""></a></div>
+          <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb28.jpg" alt=""></a></div>
 		</div>
+        <div id="big">
+            <button id="button">关闭</button>
+            <img src="img/paint/psb28.jpg" alt="">
+        </div>
 	</div>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
@@ -71,6 +104,24 @@
 
     			}
     		}*/
+
+            //点击小图查看大图
+            var items = document.getElementsByClassName('thumbnail');
+            var big = document.getElementById('big');
+            var img = big.getElementsByTagName('img')[0];
+            for (var i = 0; i < items.length; i++) {
+                items[i].index = i;
+                items[i].onclick = function(){
+                    var src = this.getElementsByTagName('img')[0].src;
+                    img.src = src;
+                    big.style.display = "block";
+                }
+            }
+
+            var button = document.getElementById('button');
+            button.onclick = function(){
+                big.style.display = "none";
+            }
     	}
 
     	function waterfall(parent,box){
