--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                   <li role="separator" class="divider"></li>
                 </ul>
               </li>
+              <li><a href="list6.html" target="_blank">js实例</a></li>
               <li><a href="list4.html" target="_blank">妙味课堂js</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">canvas<span class="caret"></span></a>
