--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                   <li><a href="web/fruits/index.html" target="_blank">CANDY</a></li>
                 </ul>
               </li> -->
+              <li><a href="list7.html" target="_blank">c语言</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">小案例集锦<span class="caret"></span></a>
                 <ul class="dropdown-menu">
