--- a/index.html
+++ b/index.html
@@ -51,28 +51,31 @@
                   <li><a href="web/fruits/index.html" target="_blank">CANDY</a></li>
                 </ul>
               </li> -->
-              <li><a href="list7.html" target="_blank">c语言</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">学习笔记<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="notes/c.html" target="_blank">c语言</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="notes/mobile web.html" target="_blank">移动web</a></li>
+                </ul>
+              </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">小案例集锦<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="list1.html" target="_blank">第一章 表单常用代码</a></li>
+                  <li><a href="list4.html" target="_blank">妙味课堂js</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="list2.html" target="_blank">第二章 css3小特效</a></li>
+                  <li><a href="list1.html" target="_blank">小特效</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="list3.html" target="_blank">第三章 轮播</a></li>
+                  <li><h5>React</h5></li>
+                  <li><a href="react/todolist.html" target="_blank">React TodoList Demo</a></li>
                   <li role="separator" class="divider"></li>
-                </ul>
-              </li>
-              <li><a href="list6.html" target="_blank">js实例</a></li>
-              <li><a href="list4.html" target="_blank">妙味课堂js</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">canvas<span class="caret"></span></a>
-                <ul class="dropdown-menu">
+                  <li><h5>canvas</h5></li>
                   <li><a href="e/game/01.html" target="_blank">js+canvas时钟</a></li>
                   <li><a href="e/game/02.html" target="_blank">js+canvas五子棋</a></li>
+                  <li role="separator" class="divider"></li>
                 </ul>
               </li>
-              <li><a href="list5.html" target="_blank">我的画画</a></li>
+              <li><a href="paint.html" target="_blank">我的画画</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
