--- a/list1.html
+++ b/list1.html
@@ -34,16 +34,41 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
+              <!-- <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">网站集锦<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="web/web02/index.html" target="_blank">VOYAGE</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="web/blog/index.html" target="_blank">MY RESUMR</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="web/fruits/index.html" target="_blank">CANDY</a></li>
+                </ul>
+              </li> -->
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">学习笔记<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="notes/c.html" target="_blank">c语言</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="notes/mobile web.html" target="_blank">移动web</a></li>
+                </ul>
+              </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">小案例集锦<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="list1.html">第一章 表单常用代码</a></li>
+                  <li><a href="list4.html" target="_blank">妙味课堂js</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="list2.html">第二章 css3小特效</a></li>
+                  <li><a href="list1.html" target="_blank">小特效</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="list3.html" target="_blank">第三章 轮播</a></li>
+                  <li><h5>React</h5></li>
+                  <li><a href="list2.html" target="_blank">React TodoList Demo</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><h5>canvas</h5></li>
+                  <li><a href="e/game/01.html" target="_blank">js+canvas时钟</a></li>
+                  <li><a href="e/game/02.html" target="_blank">js+canvas五子棋</a></li>
+                  <li role="separator" class="divider"></li>
                 </ul>
               </li>
+              <li><a href="paint.html" target="_blank">我的画画</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -51,7 +76,7 @@
 
 		<ul>
 			<li>
-				<h3>第一章 表单小特效</h3>
+				<h3>表单小特效</h3>
 				<dl class="sub-dl">
 				    <dd><a href="e/1/index.html" title="去除字符串左右的空格">去除字符串左右的空格</a></dd>
 				    <dd><a href="e/2/index.html" title="验证用户是否输入">验证用户是否输入</a></dd>
@@ -60,8 +85,30 @@
 				    <dd><a href="e/5/index.html" title="禁止用户复制和粘贴">禁止用户复制和粘贴</a></dd>
 				    <dd><a href="e/6/index.html" title="限制只能输入数字">限制只能输入数字</a></dd>
 				    <dd><a href="e/7/index.html" title="限制字符串长度">限制字符串长度</a></dd>
+            <dd><a href="basic/demo001.html" title="JavaScript基础第1天特效">JavaScript基础第1天特效</a></dd>
+            <dd><a href="basic/demo002.html" title="JavaScript基础第2天特效">JavaScript基础第2天特效</a></dd>
+            <dd><a href="basic/demo003.html" title="JavaScript基础第3天特效">JavaScript基础第3天特效</a></dd>
 				</dl>
 			</li>
+      <li>
+        <h3>css3小特效</h3>
+        <dl class="sub-dl">
+            <dd><a href="e/8/index.html" title="限制字符串长度">css33种方式画六边形</a></dd>
+            <dd><a href="e/9/flex.html" title="限制字符串长度">flex画骰子</a></dd>
+            <dd><a href="e/css3/03/index.html" title="css3画五角星">css3画五角星</a></dd>
+        </dl>
+      </li>
+      <li>
+        <h3>轮播</h3>
+        <dl class="sub-dl">
+            <dd><a href="e/10/index.html" target="_blank" title="js点击小图显示大图">js点击小图显示大图</a></dd>
+            <dd><a href="e/11/index.html" target="_blank" title="jquery点击小图显示大图">jquery点击小图查看大图</a></dd>
+            <dd><a href="e/12/index.html" target="_blank" title="js左右切换">js左右切换</a></dd>
+            <dd><a href="e/13/index.html" target="_blank" title="jquery左右切换">jquery左右切换</a></dd>
+            <dd><a href="e/14/index.html" target="_blank" title="js左右切换带定时器">js左右切换带定时器</a></dd>
+            <dd><a href="e/15/index.html" target="_blank" title="jquery左右切换带定时器">jquery左右切换带定时器</a></dd>
+        </dl>
+      </li>
 		</ul>
 	</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
