--- a/list4.html
+++ b/list4.html
@@ -34,18 +34,41 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
+              <!-- <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">网站集锦<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="web/web02/index.html" target="_blank">VOYAGE</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="web/blog/index.html" target="_blank">MY RESUMR</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="web/fruits/index.html" target="_blank">CANDY</a></li>
+                </ul>
+              </li> -->
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">学习笔记<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="notes/c.html" target="_blank">c语言</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="notes/mobile web.html" target="_blank">移动web</a></li>
+                </ul>
+              </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">小案例集锦<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="list1.html">第一章 表单常用代码</a></li>
+                  <li><a href="list4.html" target="_blank">妙味课堂js</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="list2.html">第二章 css3小特效</a></li>
+                  <li><a href="list1.html" target="_blank">小特效</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="list3.html" target="_blank">第三章 轮播</a></li>
+                  <li><h5>React</h5></li>
+                  <li><a href="list2.html" target="_blank">React TodoList Demo</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="list4.html" target="_blank">第四章 妙味课堂</a></li>
+                  <li><h5>canvas</h5></li>
+                  <li><a href="e/game/01.html" target="_blank">js+canvas时钟</a></li>
+                  <li><a href="e/game/02.html" target="_blank">js+canvas五子棋</a></li>
+                  <li role="separator" class="divider"></li>
                 </ul>
               </li>
+              <li><a href="paint.html" target="_blank">我的画画</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
