--- a/paint.html
+++ b/paint.html
@@ -86,6 +86,12 @@
 		  <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb26.jpg" alt=""></a></div>
           <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb27.jpg" alt=""></a></div>
           <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb28.jpg" alt=""></a></div>
+          <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb29.jpg" alt=""></a></div>
+          <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb30.jpg" alt=""></a></div>
+          <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb31.jpg" alt=""></a></div>
+          <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb32.jpg" alt=""></a></div>
+          <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb33.jpg" alt=""></a></div>
+          <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb34.jpg" alt=""></a></div>
 		</div>
         <div id="big">
             <button id="button">关闭</button>
