--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                   <li><a href="notes/c.html" target="_blank">c语言</a></li>
                   <li role="separator" class="divider"></li>
                   <li><a href="notes/mobile web.html" target="_blank">移动web</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="notes/react.html" target="_blank">react项目搭建</a></li>
                 </ul>
               </li>
               <li class="dropdown">
