--- a/index.html
+++ b/index.html
@@ -91,30 +91,37 @@
                 <img src="img/about-me.png" alt="about">
                 <h3>关于.我</h3>
                 <hr>
-                <p><strong>张丹-web前端‘攻城狮’。</strong>本科，网络工程专业。2年+以上工作经验。透彻掌握HTML、CSS；熟练掌握Javascript及一些常用框架(eg:Bootstrap,JQuery,react)并有实际项目开发经验。对HTML5、css3、响应式设计等前沿技术与其设计理念有实际了解和实践。喜欢编写前端代码，并努力为成为一名高级前端开发工程师而奋斗！</p>
+                <p><strong>张丹-web前端‘攻城狮’。</strong>本科，网络工程专业。3年以上工作经验。熟练掌握HTML、CSS、Javascript及一些常用框架(eg:Bootstrap,JQuery,react)并有实际项目开发经验。对HTML5、css3、响应式设计等前沿技术与其设计理念有实际了解和实践。喜欢编写前端代码，并努力为成为一名高级前端开发工程师而奋斗！</p>
             </div>
             <button>smile <span class="glyphicon glyphicon-heart-empty"></span></button>
             <div class="detail row">
-              <div class="col-md-4">
+              <div class="col-md-3">
                   <div class="sixedge">PS</div>
                   <h2>页面设计</h2>
                   <h3>PhotoShop</h3>
                   <span>+</span>
                   <p>熟练掌握PS软件，能够设计，制作简单页面。并能精准切图、抠图或者处理图片等。</p>
               </div>
-              <div class="col-md-4">
-                  <div class="sixedge">SB</div>
+              <div class="col-md-3">
+                  <div class="sixedge">Sub</div>
                   <h2>网站前端</h2>
                   <h3>Sublime</h3>
                   <span>+</span>
                   <p>好的工具能够做到事半功倍！我的工具就是sublime。快捷、高效，让我的编码速度大大提升！</p>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-3">
                   <div class="sixedge">JS</div>
                   <h2>特效制作</h2>
                   <h3>JS</h3>
                   <span>+</span>
                   <p>通过实习一年，加工作两年，我已能够熟练编写页面代码，完成设计师的效果图，独立完成前端工作！</p>
+              </div>
+              <div class="col-md-3">
+                  <div class="sixedge">React</div>
+                  <h2>单向数据流</h2>
+                  <h3>react+router+webpack</h3>
+                  <span>+</span>
+                  <p>熟练掌握react。使用react制作了一个纯后台系统和手机ap单页应，并均投入实际使用中！</p>
               </div>
             </div>
         </div>
