--- a/list4.html
+++ b/list4.html
@@ -115,6 +115,7 @@
             <dd><a href="e/34/index.html" target="_blank" title="自动轮换选项卡">20.自动轮换选项卡</a></dd>
             <dd><h4>JS9-定时器管理、函数封装</h4></dd>
             <dd><h4>JS10-日期对象、网页时钟、倒计时</h4></dd>
+            <dd><a href="e/40/index.html" target="_blank" title="图片时间（无动画版）">21.图片时间（无动画版）</a></dd>
             <dd><h4>JS11-字符串方法 OK</h4></dd>
             <dd><a href="e/36/index.html" target="_blank" title="文字搬运工">14.文字搬运工</a></dd>
             <dd><a href="e/37/index.html" target="_blank" title="查找、替换、删除">15.查找、替换、删除</a></dd>
