--- a/index.html
+++ b/index.html
@@ -41,16 +41,14 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <!-- <li class="dropdown">
+              <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">网站集锦<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="web/web02/index.html" target="_blank">VOYAGE</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="web/blog/index.html" target="_blank">MY RESUMR</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="web/fruits/index.html" target="_blank">CANDY</a></li>
+                  <!-- <li><a href="web/qq/index.html" target="_blank">im.qq.com</a></li>
+                  <li role="separator" class="divider"></li> -->
+                  <li><a href="web/H5CSS3/index.html" target="_blank">H5CSS3[F12 手机模式查看]</a></li>
                 </ul>
-              </li> -->
+              </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">学习笔记<span class="caret"></span></a>
                 <ul class="dropdown-menu">
