--- a/paint.html
+++ b/paint.html
@@ -92,6 +92,8 @@
           <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb32.jpg" alt=""></a></div>
           <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb33.jpg" alt=""></a></div>
           <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb34.jpg" alt=""></a></div>
+          <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb35.jpg" alt=""></a></div>
+          <div class="item"><a href="javascript:;" class="thumbnail"><img src="img/paint/psb36.jpg" alt=""></a></div>
 		</div>
         <div id="big">
             <button id="button">关闭</button>
