--- a/list1.html
+++ b/list1.html
@@ -110,6 +110,12 @@
         </dl>
       </li>
       <li><a href="https://tokensale.udap.io/view/video/tokenSale.mp4" target="_blank" style="margin: 20px 0px;">test video</a></li>
+      <li>
+        <video autoplay="true" style="margin: 20px 0px;width:100%; height:100%; object-fit:cover;" controls="controls">
+        <source src="https://tokensale.udap.io/view/video/tokenSale.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+        </video>
+      </li>
 		</ul>
 	</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
