--- a/list1.html
+++ b/list1.html
@@ -109,10 +109,10 @@
             <dd><a href="e/15/index.html" target="_blank" title="jquery左右切换带定时器">jquery左右切换带定时器</a></dd>
         </dl>
       </li>
-      <li><a href="https://tokensale.udap.io/view/video/tokenSale.mp4" target="_blank" style="margin: 20px 0px;">test video</a></li>
+      <li><a href="movie.mp4" target="_blank" style="margin: 20px 0px;">test video</a></li>
       <li>
         <video style="margin: 20px 0px;width:100%; height:100%; object-fit:cover;" controls="controls">
-        <source src="https://tokensale.udap.io/view/video/tokenSale.mp4" type="video/mp4" >
+        <source src="movie.mp4" type="video/mp4" >
         Your browser does not support the video tag.
         </video>
       </li>
