--- a/list1.html
+++ b/list1.html
@@ -115,6 +115,10 @@
         <source src="img/movie.mp4" type="video/mp4" >
         Your browser does not support the video tag.
         </video>
+        <video autoplay="true" style="width:100%; height:100%; object-fit:cover;" controls="controls" poster="video/bg.png">
+        <source src="https://tokensale.udap.io/view/video/tokenSale.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+        </video>
       </li>
 		</ul>
 	</div>
