--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                   <!-- <li><a href="web/qq/index.html" target="_blank">im.qq.com</a></li>
                   <li role="separator" class="divider"></li> -->
                   <li><a href="web/H5CSS3/index.html" target="_blank">H5CSS3[F12 手机模式查看]</a></li>
+                  <li><a href="web/cert/index.html" target="_blank">H5</a></li>
                 </ul>
               </li>
               <li class="dropdown">
