--- a/web/cert/index.html
+++ b/web/cert/index.html
@@ -36,7 +36,7 @@
 						{{/each}}						
 					</div>									
 					<div class="mid">
-						<img src="img/logo.jpg" alt="logo">
+						<img src="img/logo.png" alt="logo">
 					</div>
 					<div class="right">
 						<p>{{certificate.dateIssued}}</p>
