--- a/web/cert/index.html
+++ b/web/cert/index.html
@@ -26,7 +26,7 @@
 				<div class="body_head">
 					<p>This certificate is granted to</p>
 					<h2>{{certificate.grantedTo}}</h2>
-					<p>In recognition of friendship membership in <br>and contribution to the club</p>
+					<p>In recognition of friendship membership in </p><p>and contribution to the club</p>
 				</div>					
 				<div class="body_foot">
 					<div class="left">
