--- a/web/cert/index.html
+++ b/web/cert/index.html
@@ -24,7 +24,7 @@
 		<div class="cont_body">
 			<div class="body_cont">
 				<div class="body_head">
-					<p>This certificate is granted to</p>
+					<p class="onep">This certificate is granted to</p>
 					<h2>{{certificate.grantedTo}}</h2>
 					<p>In recognition of friendship membership in </p><p>and contribution to the club</p>
 				</div>					
