--- a/web/privacy.html
+++ b/web/privacy.html
@@ -4,7 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Privacy Policy</title>
 		<style>
-			html {font-size: 62.5%;}
+			html {
+				/* font-size: 62.5%; */
+				font-size: 14px;
+			}
 			body{
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 				color: #565966;
@@ -13,47 +16,27 @@
 			*{margin:0;padding:0;}
 			h2{
 				color: #343849;
-				font-size: 3.5rem;
-				margin-top: 2rem;
+				font-size: 3rem;
+				margin-top: 1.5rem;
 			}
 			h2,h3{
-				margin-bottom: 2rem;
+				margin-bottom: 1.5rem;
 			}
 			h3,strong{
 				color: #343849;
-				font-size: 3rem;
+				font-size: 2rem;
 			}
 			strong{
-				font-size: 2rem;				
+				font-size: 1.5rem;				
 			}
 			p,li{
-				font-size: 2rem;
+				font-size: 1.5rem;
 	    		font-weight: 300;
 	    		line-height: 1.6;
-	    		margin-bottom: 2rem;
+	    		margin-bottom: 1.5rem;
 			}
 			ul{
 				list-style: none;
-			}
-			@media only screen and (min-width: 320px){
-			  html {
-			    font-size: 62.5% !important;
-			  }
-			}
-			@media only screen and (min-width: 640px){
-			  html {
-			    font-size: 125% !important;
-			  }
-			}
-			@media only screen and (min-width: 750px){
-			  html {
-			    font-size: 150% !important;
-			  }
-			}
-			@media only screen and (min-width: 1242px){
-			  html {
-			    font-size: 187.5% !important;
-			  }
 			}
 		</style>
 </head>
